--- a/global.css
+++ b/global.css
@@ -6,3 +6,19 @@
     margin:0;
     padding:0;
 }
+
+body{
+    background-color: var(--violet);
+}
+
+.background{
+    position:absolute;
+    top:0;
+    z-index: -1;
+}
+.logo{
+    width:10rem;
+    position:absolute;
+    top:2rem; 
+    left:2rem;
+}
