--- a/utility.css
+++ b/utility.css
@@ -1,7 +1,7 @@
 :root {
     --violet: hsl(257, 40%, 49%);
     --soft-magenta: hsl(300, 69%, 71%);
-
-    
+    font-family: "Open Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
   }
   
